# orpheus_rs

./: .gitignore  Cargo.toml
res/models/: monkey.glb
src/: main.rs  render.rs  window.rs
src/game/: mod.rs
src/orpheus/: ecs.rs  engine.rs  game.rs  mod.rs  render.rs  scene.rs  stopwatch.rs  window.rs
src/orpheus/ecs/: component.rs  entity.rs  entity_handle.rs
src/orpheus/ecs/component/: model.rs  monkey.rs  transform.rs
src/orpheus/render/: camera.rs  model.rs  model_cache.rs  render_pass.rs
src/orpheus/render/model/: loaders.rs  mesh.rs  vertex.rs
src/orpheus/render/model/loaders/: gltf.rs
src/orpheus/render/render_pass/: clear.rs  diffuse.rs
src/orpheus/render/render_pass/diffuse/: data.rs
src/orpheus/render/render_pass/shaders/: diffuse.wgsl
src/orpheus/window/: event.rs
src/render/: camera.rs  misc.rs  mod.rs  model.rs
src/render/static_res/: shader.wgsl
src/state/: mod.rs
