[package]
name = "render_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
specs = { version = "0.18.0", features = ["derive"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
raw-window-handle = "0.5.0"
winit = "0.27"
wgpu = "0.14"
gltf = "1.0"
egui = "0.20.1"
rapier3d = "0.16.1"
cgmath = "0.18.0"